Release Notes
~~~~~~~~~~~~~
Release 0.4.15 - Mar x, 2003
  * Frobnicate internally stored passwords, partially 
    obfuscating them in memory.  Not actually more 
    secure, but harder to casually discover a password.
  * Tighten configuration file lines to more quickly
    detect misconfiguration; give the -relax option if
    it is too paranoid.

Release 0.4.14 - Jan 24, 2003
  * Handle building on systems with both posix and gnu
    regex in different but conflicting files.  
  * Restart wmbiff on SIGUSR1.  You may need to use 
    'killall -USR1 wmbiff' if it gets stuck.
  * Restart wmbiff on ctrl-shift mouse 1.

Release 0.4.13 - Jan 20, 2003
  * Fix a file descriptor leak when using 
    both Shell and IMAP clients.
  * Portability to Mac OS X, Solaris, and probably BSD
    restored (thanks sourceforge compile farm!) with a
    partial rewrite of regular expression handling for
    IMAP and POP mailboxes.

Release 0.4.12 - Jan 3, 2003
  * Fix a bug introduced in 0.4.9 that interfered with
    -geometry handling. (Debian #173813)

Release 0.4.11 - Dec 28, 2002
  * security.debian.rb script to check for updates on 
    security.debian.org, installed in $prefix/lib/wmbiff/
    add: path.x=/usr/lib/wmbiff/security.debian.rb to 
    your .wmbiffrc (and install ruby if you haven't already).
  * Internal cleanups to allow long askpass commands.

Release 0.4.10 - Dec 12, 2002
  * Peter McAlpine's globalnotify feature - elect to play a 
    sound on new mail in *any* mailbox without a chorus of
    sounds from every mailbox.
  * -skip-certificate-check option for when your imaps server
    is misconfigured and you can't do anything about it.

Release 0.4.9 - Dec 1, 2002
  * GNUTLS v0.5.9 or higher required
  * Check TLS certificate hostname against the hostname we're
    connecting to.  This raises the bar, but does not make 
    wmbiff's TLS implementation secure against man in the 
    middle attacks.
  * WMBiff scales to the number of mailboxes you're