@@ -7,6 +7,8 @@ Release 0.4.15 - Mar x, 2003
   * Tighten configuration file lines to more quickly
     detect misconfiguration; give the -relax option if
     it is too paranoid.
+  * Add support for -bg to round out -hi and -fg color
+    specifiers.
 
 Release 0.4.14 - Jan 24, 2003
   * Handle building on systems with both posix and gnu
@@ -411,4 +413,4 @@ Release 0.1 - Wed, 17 Nov 1999 00:00:00 +0000
   * Initial release by Gennady Belyakov <gb@ccat.elect.ru>.
 
 
-$Id: NEWS,v 1.40 2003/03/02 02:37:07 bluehal Exp $
+$Id: NEWS,v 1.41 2003/03/30 10:38:37 bluehal Exp $
